@@ -74,6 +74,7 @@ PHORONIX TEST SUITE PUBLIC TODO LIST:
 - https://wiki.mikejung.biz/Benchmarking
 - http://dacapobench.org/
 - https://github.com/soumith/convnet-benchmarks
+- https://github.com/cavazos-lab/FinanceBench
 
 ### WEB SOCKET / HTML5 USER INTERFACE WORK ###
 
