@@ -5,6 +5,7 @@ Phoronix Test Suite (Git)
 - pts-core: Automatically add used extra OpenBenchmarking.org repositories to the linked list
 - pts-core: Don't load empty tests on finish-run command
 - pts-core: Add perl-digest-md5 to external dependencies list
+- pts-core: Prevent duplicate tests/setting combinations from entering the same test run manager queue
 - phodevi: More detection improvements for NVMe devices on Linux
 
 Phoronix Test Suite 6.4.0 Milestone 3
